// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SLinkHub > renders with multiple categories correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <div class="">
      <!-- v-if -->
      <!-- v-if -->
      <h2 class="
        font-bold
        lg:text-5xl
        sm:text-4xl
        text-3xl
        text-highlighted
        text-left
        text-pretty
        tracking-tight
      ">
        Our Categories
      </h2>
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </div>
    <div class="
      gap-x-8
      gap-y-6
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      sm:grid-cols-2
    ">
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-1/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category One</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-2/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category Two</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-3/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category Three</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
    </div>
  </div>
</section>
`;

exports[`SLinkHub > renders with no categories correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <!-- v-if -->
    <div
      class="
        bg-default
        flex
        gap-2.5
        items-start
        overflow-hidden
        p-4
        relative
        ring
        ring-default
        ring-inset
        rounded-lg
        text-highlighted
        w-full
      "
      data-orientation="vertical"
    >
      <!-- v-if -->
      <div class="
        flex
        flex-1
        flex-col
        min-w-0
      ">
        <!-- v-if -->
        <div class="
          opacity-90
          text-sm
        ">
          No items listed.
        </div>
        <!-- v-if -->
      </div>
      <!-- v-if -->
    </div>
  </div>
</section>
`;

exports[`SLinkHub > renders with one category correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <div class="">
      <!-- v-if -->
      <!-- v-if -->
      <h2 class="
        font-bold
        lg:text-5xl
        sm:text-4xl
        text-3xl
        text-highlighted
        text-left
        text-pretty
        tracking-tight
      ">
        Featured Links
      </h2>
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </div>
    <div class="
      gap-x-8
      gap-y-6
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      sm:grid-cols-2
    ">
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/category-1/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category 1</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
    </div>
  </div>
</section>
`;

exports[`sLinkHub > renders with multiple categories correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <div class="">
      <!-- v-if -->
      <!-- v-if -->
      <h2 class="
        font-bold
        lg:text-5xl
        sm:text-4xl
        text-3xl
        text-highlighted
        text-left
        text-pretty
        tracking-tight
      ">
        Our Categories
      </h2>
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </div>
    <div class="
      gap-x-8
      gap-y-6
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      sm:grid-cols-2
    ">
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-1/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category One</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-2/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category Two</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/cat-3/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category Three</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
    </div>
  </div>
</section>
`;

exports[`sLinkHub > renders with no categories correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <!-- v-if -->
    <div
      class="
        bg-default
        flex
        gap-2.5
        items-start
        overflow-hidden
        p-4
        relative
        ring
        ring-default
        ring-inset
        rounded-lg
        text-highlighted
        w-full
      "
      data-orientation="vertical"
    >
      <!-- v-if -->
      <div class="
        flex
        flex-1
        flex-col
        min-w-0
      ">
        <!-- v-if -->
        <div class="
          opacity-90
          text-sm
        ">
          No items listed.
        </div>
        <!-- v-if -->
      </div>
      <!-- v-if -->
    </div>
  </div>
</section>
`;

exports[`sLinkHub > renders with one category correctly 1`] = `
<section
  class="
    isolate
    relative
  "
  data-orientation="vertical"
>
  <div class="
    flex
    flex-col
    gap-8
    lg:grid
    lg:px-8
    lg:py-32
    max-w-(--ui-container)
    mx-auto
    px-4
    py-16
    sm:gap-16
    sm:px-6
    sm:py-24
    w-full
  ">
    <div class="">
      <!-- v-if -->
      <!-- v-if -->
      <h2 class="
        font-bold
        lg:text-5xl
        sm:text-4xl
        text-3xl
        text-highlighted
        text-left
        text-pretty
        tracking-tight
      ">
        Featured Links
      </h2>
      <!-- v-if -->
      <!-- v-if -->
      <!-- v-if -->
    </div>
    <div class="
      gap-x-8
      gap-y-6
      grid
      grid-cols-1
      lg:grid-cols-4
      md:grid-cols-3
      sm:grid-cols-2
    ">
      <a
        class="
          flex
          focus-visible:outline-primary
          font-medium
          gap-3
          group
          hover:text-default
          items-center
          text-base
          text-muted
          transition-all
        "
        href="/linkhub/category-1/"
      ><span
        aria-hidden="true"
        class="
          group-hover:translate-x-1
          i-lucide:arrow-right
          iconify
          size-4
          text-dimmed
          transition-all
        "
      ></span><span>Category 1</span>
        <hr class="
        border-(--ui-border)
        flex-1
        min-w-2
      " />
      </a>
    </div>
  </div>
</section>
`;
